k8/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
    name: live-bootcamp-proj
    labels:
        name: live-bootcamp-proj
