k8/app-service.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
  namespace: live-bootcamp-proj
  labels:
    app: app-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      containers:
        - name: auth-service
          image: mrsmith9ja/auth-service
          ports:
            - containerPort: 3000
              protocol: TCP
        - name: app-service
          image: mrsmith9ja/app-service
          ports:
            - containerPort: 8000
              protocol: TCP
