k8/services.yml
apiVersion: v1
kind: Service
metadata:
    name: app-service
    namespace: live-bootcamp-proj
spec:
    selector:
        app: app-service
    ports:
      - protocol: TCP
        port: 8000
        targetPort: 8000
    type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
    name: auth-service
    namespace: live-bootcamp-proj
spec:
    selector:
        app: app-service
    ports:
      - protocol: TCP
        port: 3000
        targetPort: 3000
    type: ClusterIP
