k8/ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-bootcamp-proj-ingress
  namespace: live-bootcamp-proj
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"

spec:
  tls:
    - secretName: lbc-purple-cipher.com
      hosts:
        - app-service.lbc.purple-cipher.com
        - auth-service.lbc.purple-cipher.com
  rules:
    - host: app-service.lbc.purple-cipher.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8000
    - host: auth-service.lbc.purple-cipher.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
